Still fixing a lot of stuff

--- a/Tests/assets/css/style.css
+++ b/Tests/assets/css/style.css
@@ -1,4 +1,4 @@
 @import 'normalise.css';
 @import 'fonts.css';
 @import 'bootstrap.css';
-@import 'bootstrap-theme.css';
+/*@import 'bootstrap-theme.css';*/
